force-app/main/default/objects/Partner_Notification__c/Partner_Notification__c.object-meta.xml
<CustomObject>
    <label>Partner Notification</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Partner Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>