force-app/main/default/objects/Partner_Notification__c/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <label>Action Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>