force-app/main/default/objects/Partner_Notification__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <label>Action URL</label>
    <type>Url</type>
</CustomField>