force-app/main/default/objects/Partner_Notification__c/fields/Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Dismissed__c</fullName>
    <label>Dismissed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>