force-app/main/default/objects/Partner_Notification__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the recipient has read the notification.</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>