force-app/main/default/objects/Partner_Notification__c/fields/Navigation_URL__c.field-meta.xml
<CustomField>
    <fullName>Navigation_URL__c</fullName>
    <description>Relative URL</description>
    <label>Navigation URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>