force-app/main/default/objects/Partner_Notification__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recipient Contact</description>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Notifications</relationshipLabel>
    <relationshipName>Partner_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>