force-app/main/default/objects/Partner_Notification__c/fields/Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>