force-app/main/default/objects/Partner_Notification__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short title displayed for the notification.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>